# mcp-manager-standalone

./: .gitignore  AUTO_UPDATE_DESIGN.md  CMakeLists.txt  DESIGN_CLIENT_PERMISSIONS.md  INSTALL.md  LAUNCHER_README.md  README.md  build.bat  build.sh  launcher.html  mcp-gateway.desktop  run.bat  run.sh  sync_keystore_to_config.py  test_keystore.cpp  test_teamcentraal_server.py  test_tools_list.py  test_user_auth.py
configs/: servers.json
docker/azure-devops-mcp/: Dockerfile  README.md  azure-devops-mcp.env.example  build.sh
docs/: AZURE_DEVOPS_API_PRACTICAL_GUIDE.md  AZURE_DEVOPS_API_REFERENCE.md  LOGGING.md  TEAMCENTRAAL_API_GUIDE.md  TEAMCENTRAAL_MCP_QUICKSTART.md
include/: AzureDevOpsClient.h  CredentialsTab.h  Keystore.h  Logger.h  MCPGateway.h  MCPServer.h  MCPServerInstance.h  MCPServerManager.h  MCPSession.h  MainWindow.h  TrafficMonitor.h  UpdateChecker.h  UpdateDialog.h  Version.h
mcp_servers/: README.md  __init__.py  chatns_server.py  confluence_server.py  demo_mcp_server.py  devops_server.py  requirements.txt  teamcentraal_server.py
mcp_servers/shared/: config.py  permissions.py
scripts/: get_token.py  keystore.py  register_token.py
src/: AzureDevOpsClient.cpp  CredentialsTab.cpp  Keystore.cpp  Logger.cpp  MCPGateway.cpp  MCPServer.cpp  MCPServerInstance.cpp  MCPServerManager.cpp  MCPSession.cpp  MainWindow.cpp  TrafficMonitor.cpp  UpdateChecker.cpp  UpdateDialog.cpp  main.cpp
